--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.cloud.config.server.git.uri=https://github.com/alanmac21baylor/lms.git
+spring.cloud.config.server.git.uri=https://github.com/alanmac21baylor/Breadcrumbslibraryservices.git
 spring.cloud.config.server.git.clone-on-start=true
 server.port=8888
